test/fail_compilation/namedarg.d

void test(string a, string b) {

}

void main() {
    test(b:"hello", a:"world");
}